fix: centered unauthenticated homescreen
Ref: oph-717

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -14,7 +14,8 @@
     </div>
   </div>
   <div
-    class="au-c-sidebar-container__content au-u-background-gray-100"
+    class="au-c-sidebar-container__content au-u-background-gray-100 c-home-center
+      {{if this.currentSession.isAuthenticated '' 'au-u-flex--center'}}"
     id="content"
     tabindex="0"
   >
