feat: make the image a little bigger on desktop and mobile
Refs: oph-717

--- a/app/styles/components/_c-home.scss
+++ b/app/styles/components/_c-home.scss
@@ -12,9 +12,14 @@
   max-width: 70%;
 }
 
+.c-home-smaller-image-when-mobile {
+  min-width: 25vw;
+}
+
 @media ((width <= 63.9375em)) {
   .c-home-smaller-image-when-mobile {
-    max-width: 15vh;
+    max-width: 25rem;
+    min-width: 25rem;
   }
 
   .au-c-sidebar {
