feat: the archive button is disabled when on load the model cannot be archived
When an action has been executed successfully this check is not updated yet

Refs: oph-721

--- a/app/components/inventory/edit-toolbar.hbs
+++ b/app/components/inventory/edit-toolbar.hbs
@@ -30,6 +30,7 @@
               {{on "click" this.openEditModal}}
             >Pas aan</AuButton>
             <AuButton
+              @disabled={{not this.canArchive.value}}
               @icon="archive"
               @skin="naked"
               @hideText={{true}}
