fix: scroll on inventory admin pages
Refs: oph-717

--- a/app/components/sidebar-container.hbs
+++ b/app/components/sidebar-container.hbs
@@ -1,4 +1,5 @@
-<div class="au-c-sidebar-container">
+{{!-- template-lint-disable no-inline-styles --}}
+<div class="au-c-sidebar-container" style="overflow-y:auto">
   <div class="au-c-sidebar-container__sidebar">{{yield to="sidebar"}}</div>
   <div class="au-c-sidebar-container__content" id="content" tabindex="0">{{yield to="content"}}</div>
 </div>
