--- a/app/templates/inventory.hbs
+++ b/app/templates/inventory.hbs
@@ -1,6 +1,6 @@
 {{page-title "Inventaris processen"}}
 {{breadcrumb "Inventaris processen" route="inventory.index"}}
 
-<div class="au-c-body-container au-c-body-container--scroll">
+<div class="au-c-body-container">
   {{outlet}}
 </div>
