--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -150,6 +150,7 @@ tr:hover .inventory-row-button-group .au-c-button {
 .highlight-section {
   border-radius: 5px;
   background-color: var(--au-blue-200) !important;
+  padding-bottom: 1rem;
 }
 
 .inventory-domain-tables {
