--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,24 +7,13 @@
 
 <AuModalContainer />
 <AuToaster />
-<AuApp>
+<AuApp class={{if this.overrideScrollOnHomePage "override-home-page" ""}}>
   <AppHeader />
-  <main id="main" class="au-c-main-container">
-    <div
-      class="au-c-main-container__content au-c-main-container__content--scroll au-u-flex au-u-flex--column"
-      id="content"
-      tabindex="-1"
-    >
-      {{#if this.maintenanceEnabled}}
-        <AuAlert
-          @skin="warning"
-          @icon="alert-triangle"
-          class="au-u-margin-bottom-none au-c-env-announcement"
-        >
-          <p>{{this.maintenanceMessage}}</p>
-        </AuAlert>
-      {{/if}}
-      {{outlet}}
-    </div>
-  </main>
+  {{#if this.isBreadcrumbBarShown}}
+    <NavigationBar />
+  {{/if}}
+  {{#if this.isProcessBarShown}}
+    <ProcessBar />
+  {{/if}}
+  {{outlet}}
 </AuApp>
