feat: show a warning alert-triangle icon next to the linked inventory process
- show this on the detail page when not editing
- When editing (selecting) a linked process the items in the table will also show an icon when they have archived items

Refs: oph-721

--- a/app/components/process/inventory-process-card.hbs
+++ b/app/components/process/inventory-process-card.hbs
@@ -42,7 +42,18 @@
               {{/if}}
             {{else}}
               <div class="au-u-flex au-u-flex--row">
-                {{this.processConceptTitle}}
+                <div class="au-u-flex au-u-vertical-center">
+                  <p> {{this.processConceptTitle}}</p>
+                  {{#if this.hasProcessArchivedProperties}}
+                    <AuIcon
+                      class="icon--warning"
+                      @icon="alert-triangle"
+                      @size="large"
+                      @alignment="right"
+                      @ariaHidden={{this.ariaHidden}}
+                    />
+                  {{/if}}
+                </div>
                 <AuButton @skin="naked" class="process-change-button" />
               </div>
             {{/if}}
