--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -166,3 +166,7 @@ tr:hover .inventory-row-button-group .au-c-button {
 .au-c-tabs-list__item a:focus {
   outline: none !important;
 }
+
+.icon--warning {
+  color: var(--au-orange-500);
+}
