--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -30,4 +30,5 @@
 @import 'components/c-navigation';
 @import 'components/c-footer';
 @import 'components/c-favorite';
+@import 'components/c-tooltip';
 @import 'shame';
