feat: add a tooltip on the icon that the process has archived params
Refs: oph-721

--- a/app/components/process/inventory-process-card.hbs
+++ b/app/components/process/inventory-process-card.hbs
@@ -45,13 +45,18 @@
                 <div class="au-u-flex au-u-vertical-center">
                   <p> {{this.processConceptTitle}}</p>
                   {{#if this.hasProcessArchivedProperties}}
-                    <AuIcon
-                      class="icon--warning"
-                      @icon="alert-triangle"
-                      @size="large"
-                      @alignment="right"
-                      @ariaHidden={{this.ariaHidden}}
-                    />
+                    <Shared::Tooltip
+                      @show={{true}}
+                      @text="Dit process heeft gearchiveerde parameters"
+                    >
+                      <AuIcon
+                        class="icon--warning"
+                        @icon="alert-triangle"
+                        @size="large"
+                        @alignment="right"
+                        @ariaHidden={{this.ariaHidden}}
+                      />
+                    </Shared::Tooltip>
                   {{/if}}
                 </div>
                 <AuButton @skin="naked" class="process-change-button" />
