--- a/app/components/process/inventory-process-card/popup.hbs
+++ b/app/components/process/inventory-process-card/popup.hbs
@@ -128,15 +128,6 @@
                         }}"
                     >
                       <td class="au-u-flex au-u-vertical-align">
-                        {{#if process.processGroup.isArchived}}
-                          <AuIcon
-                            class="icon--warning au-u-margin-right-small"
-                            @icon="alert-triangle"
-                            @size="large"
-                            @alignment="right"
-                            @ariaHidden={{this.ariaHidden}}
-                          />
-                        {{/if}}
                         <AuLink
                           class="process-modal-link"
                           {{on "click" (fn this.selectProcessConcept process)}}
@@ -155,17 +146,34 @@
     </form>
   </:body>
   <:footer>
-    <AuButtonGroup class="au-u-flex--end">
-      <AuButton
-        @skin="secondary"
-        {{on "click" this.resetModel}}
-      >Annuleer</AuButton>
-      <AuButton
-        type="submit"
-        form="process-concept-selection-form"
-        @skin="primary"
-        @disabled={{this.saveButtonDisabled}}
-      >Proces selecteren</AuButton>
-    </AuButtonGroup>
+    <AuToolbar as |Group|>
+      <Group>
+        {{#if this.selectedProcessConcept.processGroup.isArchived}}
+          <div class="au-u-flex au-u-flex--row au-u-vertical-center">
+            <AuIcon
+              class="icon--warning au-u-margin-right-small"
+              @icon="alert-triangle"
+              @size="large"
+              @alignment="right"
+            />
+            <p>Dit process heeft gearchiveerde parameters.</p>
+          </div>
+        {{/if}}
+      </Group>
+      <Group>
+        <AuButtonGroup class="au-u-flex--end">
+          <AuButton
+            @skin="secondary"
+            {{on "click" this.resetModel}}
+          >Annuleer</AuButton>
+          <AuButton
+            type="submit"
+            form="process-concept-selection-form"
+            @skin="primary"
+            @disabled={{this.saveButtonDisabled}}
+          >Proces selecteren</AuButton>
+        </AuButtonGroup>
+      </Group>
+    </AuToolbar>
   </:footer>
 </AuModal>
