feat: when upserting a inventory process also show when an archived item is selected
Refs: oph-721

--- a/app/components/process/inventory-process-card.hbs
+++ b/app/components/process/inventory-process-card.hbs
@@ -50,11 +50,10 @@
                       @text="Dit process heeft gearchiveerde parameters"
                     >
                       <AuIcon
-                        class="icon--warning"
+                        class="color--warning"
                         @icon="alert-triangle"
                         @size="large"
                         @alignment="right"
-                        @ariaHidden={{this.ariaHidden}}
                       />
                     </Shared::Tooltip>
                   {{/if}}
