--- a/app/components/process/inventory-process-card/popup.hbs
+++ b/app/components/process/inventory-process-card/popup.hbs
@@ -149,9 +149,9 @@
     <AuToolbar as |Group|>
       <Group>
         {{#if this.selectedProcessConcept.processGroup.isArchived}}
-          <div class="au-u-flex au-u-flex--row au-u-vertical-center">
+          <div class="au-u-flex au-u-flex--row au-u-vertical-center color--warning">
             <AuIcon
-              class="icon--warning au-u-margin-right-small"
+              class=" au-u-margin-right-small"
               @icon="alert-triangle"
               @size="large"
               @alignment="right"
