--- a/app/components/inventory/upsert-process-modal.hbs
+++ b/app/components/inventory/upsert-process-modal.hbs
@@ -61,28 +61,47 @@
   </:body>
 
   <:footer>
-    <AuButtonGroup class="au-u-flex--end">
-      {{#if this.formIsDirty}}
-        <AuButton
-          @skin="naked"
-          @icon="redo"
-          {{on "click" this.resetProperties}}
-        >
-          Herstel keuzes
-        </AuButton>
-      {{/if}}
+    <AuToolbar as |Group|>
+      <Group>
+        {{#if this.processGroup.isArchived}}
+          <div
+            class="au-u-flex au-u-flex--row au-u-vertical-center color--warning"
+          >
+            <AuIcon
+              class="au-u-margin-right-small"
+              @icon="alert-triangle"
+              @size="large"
+              @alignment="right"
+            />
+            <p>Dit process heeft gearchiveerde parameters.</p>
+          </div>
+        {{/if}}
+      </Group>
+      <Group>
+        <AuButtonGroup class="au-u-flex--end">
+          {{#if this.formIsDirty}}
+            <AuButton
+              @skin="naked"
+              @icon="redo"
+              {{on "click" this.resetProperties}}
+            >
+              Herstel keuzes
+            </AuButton>
+          {{/if}}
 
-      <AuButton @skin="secondary" {{on "click" @onClose}}>
-        Annuleer
-      </AuButton>
+          <AuButton @skin="secondary" {{on "click" @onClose}}>
+            Annuleer
+          </AuButton>
 
-      <AuButton
-        @skin="primary"
-        @disabled={{not this.canSave}}
-        {{on "click" this.saveProcess}}
-      >
-        Opslaan
-      </AuButton>
-    </AuButtonGroup>
+          <AuButton
+            @skin="primary"
+            @disabled={{not this.canSave}}
+            {{on "click" this.saveProcess}}
+          >
+            Opslaan
+          </AuButton>
+        </AuButtonGroup>
+      </Group>
+    </AuToolbar>
   </:footer>
 </AuModal>
