--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -167,6 +167,6 @@ tr:hover .inventory-row-button-group .au-c-button {
   outline: none !important;
 }
 
-.icon--warning {
-  color: var(--au-orange-500);
+.color--warning {
+  color: var(--au-orange-700);
 }
