feat: the filter selectors of inventory table also show when the selected item is archived
Refs: oph-721

--- a/app/components/inventory/select-category.hbs
+++ b/app/components/inventory/select-category.hbs
@@ -13,4 +13,10 @@
   >
     {{category.label}}
   </PowerSelect>
+  {{#if this.selectedCategory.value.isArchived}}
+    <AuHelpText @skin="warning" @warning={{true}} class="color--warning">
+      <AuIcon @icon="alert-triangle" @size="small" @alignment="right" />
+      Gearchiveerd
+    </AuHelpText>
+  {{/if}}
 </div>
