--- a/app/components/inventory/select-domain.hbs
+++ b/app/components/inventory/select-domain.hbs
@@ -13,4 +13,10 @@
   >
     {{domain.label}}
   </PowerSelect>
+  {{#if this.selectedDomain.value.isArchived}}
+    <AuHelpText @skin="warning" @warning={{true}} class="color--warning">
+      <AuIcon @icon="alert-triangle" @size="small" @alignment="right" />
+      Gearchiveerd
+    </AuHelpText>
+  {{/if}}
 </div>
