feat: show the count of organizations using the process
Refs: oph-682

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -33,6 +33,7 @@
   <Process::DetailsCard
     @canEdit={{this.canEdit}}
     @process={{this.process}}
+    @usedByUserCount={{@model.usedByUserCount}}
     @setIsEditing={{this.setIsEditingDetails}}
   />
 
