feat: show usage in a datacard at the bottom of the detail page
- show it below attachments. Data is ok to in the future show diagrams or some sort
- show the name of organization with the type in a status pill

Refs: oph-682

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -69,4 +69,8 @@
     @trackDownloadFileEvent={{this.trackDownloadFileEvent}}
   />
 
+  <Process::Usage
+    @process={{this.process}}
+  />
+
 </AuBodyContainer>
