refactor: make canUnArchive on model a getter instead of async function
Refs: oph-721

--- a/app/components/inventory/edit-toolbar.hbs
+++ b/app/components/inventory/edit-toolbar.hbs
@@ -31,7 +31,7 @@
             >Pas aan</AuButton>
             <AuButton
               @loading={{this.isCheckingForUsage}}
-              @hideLoadingMessage={{true}}
+              @loadingMessage=""
               @icon="archive"
               @skin="naked"
               @hideText={{true}}
