--- a/app/components/inventory/editable-group-row.hbs
+++ b/app/components/inventory/editable-group-row.hbs
@@ -46,7 +46,7 @@
           />
           <AuButton
             @loading={{this.isCheckingForUsage}}
-            @hideLoadingMessage={{true}}
+            @loadingMessage=""
             @icon="archive"
             @skin="naked"
             @size="large"
