OPH-721 | Restrict archiving admin page (#145)
* feat: create archivable models

This model is the interface/abstract model for the inventory process entities

Refs: oph-721

* feat: the archive button is disabled when on load the model cannot be archived

When an action has been executed successfully this check is not updated yet

Refs: oph-721

* feat: show a different modal when trying to archive when it is not possible

Removed the disabled button state so we do not need to refresh the data to much and make it complicated.
When pressing archive you will see the archive or the cannot archive modal

Refs: oph-721

* fix: add not status archived to the query

Forgot the check not archived status in the process-category and domein check if it can be archived

Refs: oph-721

* feat: update archivable model with archiv and unarchive method that sets the archivedAt datetime

Refs: oph-721

* feat: also check if the entity can be unarchived

This so we cannot unarchive the group of an archived domain/category

Refs: oph-721

* refactor: inventory-process-card

Do not show twice the same component

Refs: oph-721

* feat: show a warning alert-triangle icon next to the linked inventory process

- show this on the detail page when not editing
- When editing (selecting) a linked process the items in the table will also show an icon when they have archived items

Refs: oph-721

* feat: tooltip component

Got the code from LMB frontend

Refs: oph-721

* feat: add a tooltip on the icon that the process has archived params

Refs: oph-721

* feat: show in the popup footer if the selected process has archived parameters

Instead of showing the alert icon in the table rows

Refs: oph-721

* fix: lint tooltip scss

Refs: oph-721

* feat: when upserting a inventory process also show when an archived item is selected

Refs: oph-721

* feat: the filter selectors of inventory table also show when the selected item is archived

Refs: oph-721

* refactor: make canUnArchive on model a gett

--- a/app/components/inventory/editable-group-row.hbs
+++ b/app/components/inventory/editable-group-row.hbs
@@ -35,7 +35,7 @@
             @icon="undo"
             @skin="naked"
             @size="large"
-            {{on "click" this.unArchiveGroup}}
+            {{on "click" this.openUnArchiveModal}}
           />
         {{else}}
           <AuButton
@@ -45,6 +45,8 @@
             {{on "click" this.toggleIsEditing}}
           />
           <AuButton
+            @loading={{this.isCheckingForUsage}}
+            @loadingMessage=""
             @icon="archive"
             @skin="naked"
             @size="large"
@@ -106,6 +108,26 @@
         @alert="true"
         {{on "click" this.deleteGroupFromDomain}}
       >Verwijder</AuButton>
+    </AuButtonGroup>
+  </:footer>
+</AuModal>
+
+<AuModal
+  @modalOpen={{this.isCannotUnArchiveModelOpen}}
+  @closable={{true}}
+  @closeModal={{fn (mut this.isCannotUnArchiveModelOpen) false}}
+>
+  <:title>Kan groep niet herstellen</:title>
+  <:body>
+    <span class="au-u-medium">{{@group.label}} </span>
+    kan niet hersteld worden. Zorg dat het bovenliggende domein niet
+    gearchiveerd is.
+  </:body>
+  <:footer>
+    <AuButtonGroup class="au-u-flex--end">
+      <AuButton
+        {{on "click" (fn (mut this.isCannotUnArchiveModelOpen) false)}}
+      >Sluiten</AuButton>
     </AuButtonGroup>
   </:footer>
 </AuModal>
