--- a/app/components/inventory/edit-toolbar.hbs
+++ b/app/components/inventory/edit-toolbar.hbs
@@ -20,7 +20,7 @@
               @icon="undo"
               @skin="naked"
               @hideText={{true}}
-              {{on "click" this.unarchiveModel}}
+              {{on "click" this.openUnArchiveModal}}
             >Herstel</AuButton>
           {{else}}
             <AuButton
@@ -30,6 +30,8 @@
               {{on "click" this.openEditModal}}
             >Pas aan</AuButton>
             <AuButton
+              @loading={{this.isCheckingForUsage}}
+              @loadingMessage=""
               @icon="archive"
               @skin="naked"
               @hideText={{true}}
@@ -93,6 +95,46 @@
         @loadingMessage="Aanpassen"
         {{on "click" this.updateModelLabel}}
       >Pas aan</AuButton>
+    </AuButtonGroup>
+  </:footer>
+</AuModal>
+
+<AuModal
+  @modalOpen={{this.isCannotArchiveModelOpen}}
+  @closable={{true}}
+  @closeModal={{fn (mut this.isCannotArchiveModelOpen) false}}
+>
+  <:title>Archiveren niet toegstaan</:title>
+  <:body>
+    <span class="au-u-medium">{{@model.label}} </span>
+    kan niet gearchiveerd worden.
+    {{this.cannotArchiveMessage}}
+  </:body>
+  <:footer>
+    <AuButtonGroup class="au-u-flex--end">
+      <AuButton
+        {{on "click" (fn (mut this.isCannotArchiveModelOpen) false)}}
+      >Sluiten</AuButton>
+    </AuButtonGroup>
+  </:footer>
+</AuModal>
+
+<AuModal
+  @modalOpen={{this.isCannotUnArchiveModelOpen}}
+  @closable={{true}}
+  @closeModal={{fn (mut this.isCannotUnArchiveModelOpen) false}}
+>
+  <:title>Kan niet herstellen</:title>
+  <:body>
+    <span class="au-u-medium">{{@model.label}} </span>
+    kan niet hersteld worden. Zorg dat de bovenliggende entiteit niet
+    gearchiveerd is.
+  </:body>
+  <:footer>
+    <AuButtonGroup class="au-u-flex--end">
+      <AuButton
+        {{on "click" (fn (mut this.isCannotUnArchiveModelOpen) false)}}
+      >Sluiten</AuButton>
     </AuButtonGroup>
   </:footer>
 </AuModal>
