feat: show a replace button when archiving a group that is used in a process
Refs: oph-722

--- a/app/components/inventory/editable-group-row.hbs
+++ b/app/components/inventory/editable-group-row.hbs
@@ -170,8 +170,36 @@
         }}
         @icon={{if this.usageMessage "alert-triangle" null}}
         @alert={{true}}
+        @skin={{if this.usageMessage "secondary" "primary"}}
         {{on "click" this.archiveGroup}}
       >Archiveer</AuButton>
+      {{#if this.usageMessage}}
+        <AuButton {{on "click" this.openReplaceModal}}>
+          Vervang
+        </AuButton>
+      {{/if}}
+    </AuButtonGroup>
+  </:footer>
+</AuModal>
+
+<AuModal
+  @modalOpen={{this.isReplaceModelOpen}}
+  @closable={{true}}
+  @closeModal={{fn (mut this.isReplaceModelOpen) false}}
+>
+  <:title>Vervang groep in processen</:title>
+  <:body>
+    De groep
+    <span class="au-u-medium">{{@group.label}} </span>
+    werd gevonden in een actief inventaris proces. Door hieronder een nieuwe
+    groep te selecteren wordt het gebruik van huidige groep in de processen
+    vervangen met de nieuwe groep.
+  </:body>
+  <:footer>
+    <AuButtonGroup class="au-u-flex--end">
+      <AuButton
+        {{on "click" (fn (mut this.isReplaceModelOpen) false)}}
+      >Annuleer</AuButton>
     </AuButtonGroup>
   </:footer>
 </AuModal>
