--- a/app/components/inventory/select-domain.hbs
+++ b/app/components/inventory/select-domain.hbs
@@ -9,6 +9,7 @@
     @onChange={{this.onChange}}
     @allowClear={{true}}
     @triggerId={{@id}}
+    @disabled={{@isDisabled}}
     as |domain|
   >
     {{domain.label}}
