--- a/app/components/inventory/select-group.hbs
+++ b/app/components/inventory/select-group.hbs
@@ -9,6 +9,7 @@
     @onChange={{this.onChange}}
     @allowClear={{true}}
     @triggerId={{@id}}
+    @disabled={{@isDisabled}}
     as |group|
   >
     {{group.label}}
